--- a/notas.html
+++ b/notas.html
@@ -2,48 +2,85 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eventos JavaScript</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Eventos JavaScript</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>  
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <p class="m-2 fw-semibold">EVENTOS JAVASCRIPT</p>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end px-2" id="navbarNav">
-              <ul class="navbar-nav fw-semibold">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">CALCULADORA MASA CORPORAL</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="divisas.html">CONVERSIÓN DE DIVISAS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">NOTAS</a>
-                  </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-    <main>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <p class="m-2 fw-semibold">EVENTOS JAVASCRIPT</p>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end px-2" id="navbarNav">
+          <ul class="navbar-nav fw-semibold">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">CALCULADORA MASA CORPORAL</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="divisas.html">CONVERSIÓN DE DIVISAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">NOTAS</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+  <main>
+    <!--Creacion de Notas-->
+    <div class="bg-dark-subtle ">
+      <button class="btn btn-primary m-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse"
+        aria-expanded="false" aria-controls="collapse">Agregar Nota</button>
+      <div class="p-3 collapse" id="collapse">
+        <div class="mb-3">
+          <input type="text" class="form-control" id="tituloNota" placeholder="Título de la Nota" required>
+        </div>
+        <div class="mb-3">
+          <textarea class="form-control" id="textoNota" rows="4" placeholder="Ingresar Nota" required></textarea>
+        </div>
+        <div class="d-md-flex justify-content-end">
+          <button type="button" class="btn btn-success col-12 col-md-2 mb-3 mb-md-0 mx-md-3"
+            id="guardar">Guardar</button>
+          <button type="button" class="btn btn-danger col-12 col-md-2" id="borrar">Borrar</button>
+        </div>
+      </div>
+    </div>
+
+    <!--Filtrado y busqueda-->
+    <div class="d-block d-md-flex p-3 col-12 bg-body-secondary justify-content-between align-items-center">
+      <form class="d-flex col-12 col-md-4 order-md-2" role="search">
+        <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Buscar</button>
+      </form>
+      <div class="form-check form-switch order-md-1 mt-3 mt-md-0">
+        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Realizadas</label>
+      </div>
+    </div>
+
+    <!--Notas-->
+    <div class="p-4 row col-12 justify-content-center" id="tarjetasNotas">
+      
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="javaScript/notas.js"></script>
 </body>
 
 </html>
