--- a/notas.html
+++ b/notas.html
@@ -66,7 +66,7 @@
         <button class="btn btn-outline-success" type="submit">Buscar</button>
       </form>
       <div class="form-check form-switch order-md-1 mt-3 mt-md-0">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+        <input class="form-check-input" type="checkbox" role="switch" onclick="mostrarRealizadas()">
         <label class="form-check-label" for="flexSwitchCheckDefault">Realizadas</label>
       </div>
     </div>
