--- a/notas.html
+++ b/notas.html
@@ -62,8 +62,8 @@
     <!--Filtrado y busqueda-->
     <div class="d-block d-md-flex p-3 col-12 bg-body-secondary justify-content-between align-items-center">
       <form class="d-flex col-12 col-md-4 order-md-2" role="search">
-        <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
+        <input class="form-control me-2" type="search" placeholder="Busqueda" aria-label="Search" id="textoBusqueda">
+        <button class="btn btn-outline-success" type="submit" onclick="">Buscar</button>
       </form>
       <div class="form-check form-switch order-md-1 mt-3 mt-md-0">
         <input class="form-check-input" type="checkbox" role="switch" onclick="mostrarRealizadas()">
