--- a/divisas.html
+++ b/divisas.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-secondary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <p class="m-2 fw-semibold">EVENTOS JAVASCRIPT</p>
@@ -59,6 +59,12 @@
       </form>
     </div>
 
+    <!--Footer-->
+    <footer class="fixed-bottom d-flex justify-content-around bg-secondary text-white align-items-center ">
+      <div class="mt-3 mx-4 text-center ">
+        <p>Creado por Jesus Suarez para MindHub</p>
+      </div>
+    </footer>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
