--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-secondary" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <p class="m-2 fw-semibold">EVENTOS JAVASCRIPT</p>
@@ -21,7 +21,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end px-2" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end px-2 " id="navbarNav">
                     <ul class="navbar-nav fw-semibold">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">CALCULADORA MASA CORPORAL</a>
@@ -52,14 +52,22 @@
                 <div class="mb-3">
                     <label for="peso" class="form-label border-black">Peso (Kg)</label>
                     <input type="number" class="form-control text-center" id="peso" required>
-                </div>               
+                </div>
                 <button type="button" class="btn btn-primary fw-semibold col-12 my-3" id="calcular">Calcular</button>
                 <div>
-                    <input type="number" class="form-control form-label text-center" id="resultado" placeholder="RESULTADO" disabled>
+                    <input type="number" class="form-control form-label text-center" id="resultado"
+                        placeholder="RESULTADO" disabled>
                 </div>
             </form>
         </div>
     </main>
+    <!--Footer-->
+    <footer class="fixed-bottom d-flex justify-content-around bg-secondary text-white align-items-center mt-3">
+        <div class="mt-3 mx-4 text-center ">
+            <p>Creado por Jesus Suarez para MindHub</p>
+        </div>
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
