--- a/notas.html
+++ b/notas.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-secondary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <p class="m-2 fw-semibold">EVENTOS JAVASCRIPT</p>
@@ -41,7 +41,7 @@
 
   <main>
     <!--Creacion de Notas-->
-    <div class="bg-dark-subtle ">
+    <div class="bg-dark-subtle">
       <button class="btn btn-primary m-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse"
         aria-expanded="false" aria-controls="collapse">Agregar Nota</button>
       <div class="p-3 collapse" id="collapse">
@@ -72,9 +72,18 @@
     </div>
 
     <!--Notas-->
-    <div class="p-4 row col-12 justify-content-center" id="tarjetasNotas">
-      
+    <div class="p-4 row col-12 justify-content-center mb-5" id="tarjetasNotas">
+
     </div>
+
+    <!--Footer-->
+  
+    <footer class="fixed-bottom d-flex justify-content-around bg-secondary text-white align-items-center">
+      <div class="mt-3 mx-4 text-center ">
+        <p>Creado por Jesus Suarez para MindHub</p>
+      </div>
+    </footer>
+  
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
